--- a/config/kustomization.yaml
+++ b/config/kustomization.yaml
@@ -7,6 +7,7 @@ bases:
 - crd
 - webhook # Disable this if you're not using the webhook functionality.
 - default
+- ipam
 
 patchesJson6902:
 - target: # NOTE: This patch needs to be repeatd for EACH CustomResourceDefinition you have under crd/bases.
@@ -44,22 +45,4 @@ patchesJson6902:
     version: v1
     kind: CustomResourceDefinition
     name: metal3dataclaims.infrastructure.cluster.x-k8s.io
-  path: patch_crd_webhook_namespace.yaml
-- target:
-    group: apiextensions.k8s.io
-    version: v1
-    kind: CustomResourceDefinition
-    name: metal3ippools.infrastructure.cluster.x-k8s.io
-  path: patch_crd_webhook_namespace.yaml
-- target:
-    group: apiextensions.k8s.io
-    version: v1
-    kind: CustomResourceDefinition
-    name: metal3ipaddresses.infrastructure.cluster.x-k8s.io
-  path: patch_crd_webhook_namespace.yaml
-- target:
-    group: apiextensions.k8s.io
-    version: v1
-    kind: CustomResourceDefinition
-    name: metal3ipclaims.infrastructure.cluster.x-k8s.io
   path: patch_crd_webhook_namespace.yaml
