--- a/config/ipam/kustomization.yaml
+++ b/config/ipam/kustomization.yaml
@@ -1,8 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-#resources:
-#- github.com/Nordix/metal3-ipam/config/?ref=init-mael
-
-bases:
-- ../../../metal3-ipam/config
+resources:
+- github.com/Nordix/metal3-ipam/config/?ref=init-mael
