--- a/config/ipam/kustomization.yaml
+++ b/config/ipam/kustomization.yaml
@@ -1,5 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-resources:
-- github.com/Nordix/metal3-ipam/config/?ref=init-mael
+#resources:
+#- github.com/Nordix/metal3-ipam/config/?ref=init-mael
+
+# TODO replace with a link to the released version once released
+bases:
+- ipam-provider.yaml
