Add image disk format
to be able to leverage raw image streaming

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
@@ -504,6 +504,17 @@ spec:
                     - sha256
                     - sha512
                     type: string
+                  format:
+                    description: DiskFormat contains the image disk format
+                    enum:
+                    - raw
+                    - qcow2
+                    - qed
+                    - vdi
+                    - vmdk
+                    - vpc
+                    - vhd
+                    type: string
                   url:
                     description: URL is a location of an image to deploy.
                     type: string
