--- a/examples/clusterctl-templates/clusterctl-cluster.yaml
+++ b/examples/clusterctl-templates/clusterctl-cluster.yaml
@@ -67,6 +67,7 @@ spec:
         url: ${ IMAGE_URL }
         checksum: ${ IMAGE_CHECKSUM }
         checksumType: ${ IMAGE_CHECKSUM_TYPE }
+        format: ${ IMAGE_FORMAT }
 ---
 apiVersion: cluster.x-k8s.io/v1alpha3
 kind: MachineDeployment
@@ -112,6 +113,8 @@ spec:
       image:
         url: ${ IMAGE_URL }
         checksum: ${ IMAGE_CHECKSUM }
+        checksumType: ${ IMAGE_CHECKSUM_TYPE }
+        format: ${ IMAGE_FORMAT }
 ---
 apiVersion: bootstrap.cluster.x-k8s.io/v1alpha3
 kind: KubeadmConfigTemplate
