--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.8
+    controller-gen.kubebuilder.io/version: v0.3.0
   creationTimestamp: null
   name: metal3machinetemplates.infrastructure.cluster.x-k8s.io
 spec:
@@ -344,6 +344,14 @@ spec:
                           checksum:
                             description: Checksum is a md5sum value or a URL to retrieve
                               one.
+                            type: string
+                          checksumType:
+                            description: ChecksumType is the checksum algorithm for
+                              the image. e.g md5, sha256, sha512
+                            enum:
+                            - md5
+                            - sha256
+                            - sha512
                             type: string
                           url:
                             description: URL is a location of an image to deploy.
