--- a/examples/clusterctl-templates/clusterctl-cluster.yaml
+++ b/examples/clusterctl-templates/clusterctl-cluster.yaml
@@ -66,6 +66,7 @@ spec:
       image:
         url: ${ IMAGE_URL }
         checksum: ${ IMAGE_CHECKSUM }
+        checksumType: ${ IMAGE_CHECKSUM_TYPE }
 ---
 apiVersion: cluster.x-k8s.io/v1alpha3
 kind: MachineDeployment
