Change bmm to m3m in code base

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
@@ -389,7 +389,7 @@ spec:
       jsonPath: .status.ready
       name: Ready
       type: string
-    - description: Cluster to which this BMMachine belongs
+    - description: Cluster to which this M3Machine belongs
       jsonPath: .metadata.labels.cluster\.x-k8s\.io/cluster-name
       name: Cluster
       type: string
