--- a/config/bmo/bmo_image_patch.yaml
+++ b/config/bmo/bmo_image_patch.yaml
@@ -7,5 +7,5 @@ spec:
     spec:
       containers:
       # Change the value of image field below to your controller image URL
-      - image: quay.io/metal3-io/baremetal-operator
+      - image: quay.io/metal3-io/baremetal-operator:master
         name: baremetal-operator
