--- a/config/ipam/kustomization.yaml
+++ b/config/ipam/kustomization.yaml
@@ -1,5 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+# When updating the release, update also the image tag in image_patch.yaml
 resources:
 - https://github.com/metal3-io/ip-address-manager/releases/download/v0.0.3/ipam-components.yaml
+
+patchesStrategicMerge:
+    - image_patch.yaml
+    - pull_policy_patch.yaml
