--- a/examples/clusterctl-templates/example_variables.rc
+++ b/examples/clusterctl-templates/example_variables.rc
@@ -4,6 +4,8 @@ export API_ENDPOINT_HOST="192.168.111.249"
 export API_ENDPOINT_PORT="6443"
 export IMAGE_URL="http://192.168.0.1/ubuntu.qcow2"
 export IMAGE_CHECKSUM="http://192.168.0.1/ubuntu.qcow2.md5sum"
+export IMAGE_CHECKSUM_TYPE="md5"
+export IMAGE_FORMAT="qcow2"
 export CTLPLANE_KUBEADM_EXTRA_CONFIG="
     preKubeadmCommands:
       - ip link set dev enp2s0 up
