Download libs of mod files

--- a/hack/Dockerfile.unit
+++ b/hack/Dockerfile.unit
@@ -1,6 +1,7 @@
 FROM registry.hub.docker.com/library/golang:1.13
 
-WORKDIR /usr/local/kubebuilder
 COPY /hack/tools /usr/local/kubebuilder/
+WORKDIR /usr/local/kubebuilder
 RUN ./install_kustomize.sh && \
     ./install_kubebuilder.sh
+RUN go mod download
