--- a/hack/Dockerfile.unit
+++ b/hack/Dockerfile.unit
@@ -1,10 +1,10 @@
 FROM registry.hub.docker.com/library/golang:1.13
 
-COPY . /usr/local/kubebuilder/
-WORKDIR /usr/local/kubebuilder
-RUN go mod download -json
-
-WORKDIR /usr/local/kubebuilder/hack/tools
+COPY .  /CAPM3
+RUN cd /CAPM3 && go mod download -json
+RUN cp -r /CAPM3/hack/tools /usr/local/kubebuilder/
+RUN cd .. && rm -rf CAPM3
+WORKDIR /usr/local/kubebuilder/
 RUN ./install_kustomize.sh && \
     ./install_kubebuilder.sh
 RUN go mod download -json
