--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3datatemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3datatemplates.yaml
@@ -56,6 +56,24 @@ spec:
                 description: MetaData contains the information needed to generate
                   the metadata secret
                 properties:
+                  dnsServersFromIPPool:
+                    description: DNSServersFromPool is the list of metadata items
+                      to be rendered as dns servers.
+                    items:
+                      properties:
+                        key:
+                          description: Key will be used as the key to set in the metadata
+                            map for cloud-init
+                          type: string
+                        name:
+                          description: Name is the name of the IPPool used to fetch
+                            the value to set in the metadata map for cloud-init
+                          type: string
+                      required:
+                      - key
+                      - name
+                      type: object
+                    type: array
                   fromAnnotations:
                     description: FromAnnotations is the list of metadata items to
                       be fetched from object Annotations
@@ -69,8 +87,8 @@ spec:
                             fetch
                           type: string
                         key:
-                          description: Key is the metadata key when redendering this
-                            metadata element
+                          description: Key will be used as the key to set in the metadata
+                            map for cloud-init
                           type: string
                         object:
                           description: Object is the type of the object from which
@@ -99,8 +117,8 @@ spec:
                             from which to fetch the MAC address.
                           type: string
                         key:
-                          description: Key is the metadata key when redendering this
-                            metadata element
+                          description: Key will be used as the key to set in the metadata
+                            map for cloud-init
                           type: string
                       required:
                       - interface
@@ -116,8 +134,8 @@ spec:
                         as empty string
                       properties:
                         key:
-                          description: Key is the metadata key when redendering this
-                            metadata element
+                          description: Key will be used as the key to set in the metadata
+                            map for cloud-init
                           type: string
                         label:
                           description: Label is the key of the label to fetch
@@ -138,15 +156,16 @@ spec:
                     type: array
                   gatewaysFromIPPool:
                     description: GatewaysFromPool is the list of metadata items to
-                      be rendered as ip addresses.
+                      be rendered as gateway addresses.
                     items:
                       properties:
                         key:
-                          description: Key is the metadata key when redendering this
-                            metadata element
+                          description: Key will be used as the key to set in the metadata
+                            map for cloud-init
                           type: string
                         name:
-                          description: Name is the name of the pool to use
+                          description: Name is the name of the IPPool used to fetch
+                            the value to set in the metadata map for cloud-init
                           type: string
                       required:
                       - key
@@ -161,8 +180,8 @@ spec:
                         the index
                       properties:
                         key:
-                          description: Key is the metadata key when redendering this
-                            metadata element
+                          description: Key will be used as the key to set in the metadata
+                            map for cloud-init
                           type: string
                         offset:
                           description: Offset is the offset to apply to the index
@@ -188,11 +207,12 @@ spec:
                     items:
                       properties:
                         key:
-                          description: Key is the metadata key when redendering this
-                            metadata element
+                          description: Key will be used as the key to set in the metadata
+                            map for cloud-init
                           type: string
                         name:
-                          description: Name is the name of the pool to use
+                          description: Name is the name of the IPPool used to fetch
+                            the value to set in the metadata map for cloud-init
                           type: string
                       required:
                       - key
@@ -207,8 +227,8 @@ spec:
                         the namespace
                       properties:
                         key:
-                          description: Key is the metadata key when redendering this
-                            metadata element
+                          description: Key will be used as the key to set in the metadata
+                            map for cloud-init
                           type: string
                       required:
                       - key
@@ -222,8 +242,8 @@ spec:
                         render the object name
                       properties:
                         key:
-                          description: Key is the metadata key when redendering this
-                            metadata element
+                          description: Key will be used as the key to set in the metadata
+                            map for cloud-init
                           type: string
                         object:
                           description: Object is the type of the object from which
@@ -240,15 +260,16 @@ spec:
                     type: array
                   prefixesFromIPPool:
                     description: PrefixesFromPool is the list of metadata items to
-                      be rendered as ip addresses.
+                      be rendered as network prefixes.
                     items:
                       properties:
                         key:
-                          description: Key is the metadata key when redendering this
-                            metadata element
+                          description: Key will be used as the key to set in the metadata
+                            map for cloud-init
                           type: string
                         name:
-                          description: Name is the name of the pool to use
+                          description: Name is the name of the IPPool used to fetch
+                            the value to set in the metadata map for cloud-init
                           type: string
                       required:
                       - key
@@ -263,8 +284,8 @@ spec:
                         the string
                       properties:
                         key:
-                          description: Key is the metadata key when redendering this
-                            metadata element
+                          description: Key will be used as the key to set in the metadata
+                            map for cloud-init
                           type: string
                         value:
                           description: Value is the string to render.
@@ -448,7 +469,7 @@ spec:
                               type: string
                             ipAddressFromIPPool:
                               description: IPAddressFromIPPool contains the name of
-                                the pool to use to get an ip address
+                                the IPPool to use to get an ip address
                               type: string
                             link:
                               description: Link is the link on which the network applies
@@ -465,7 +486,7 @@ spec:
                                     properties:
                                       fromIPPool:
                                         description: FromIPPool is the name of the
-                                          pool to fetch the gateway from
+                                          IPPool to fetch the gateway from
                                         type: string
                                       string:
                                         description: String is the gateway given as
@@ -493,6 +514,10 @@ spec:
                                           pattern: ^((([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]))$
                                           type: string
                                         type: array
+                                      dnsFromIPPool:
+                                        description: DNSFromIPPool is the name of
+                                          the IPPool from which to get the DNS servers
+                                        type: string
                                     type: object
                                 required:
                                 - gateway
@@ -529,7 +554,7 @@ spec:
                                     properties:
                                       fromIPPool:
                                         description: FromIPPool is the name of the
-                                          pool to fetch the gateway from
+                                          IPPool to fetch the gateway from
                                         type: string
                                       string:
                                         description: String is the gateway given as
@@ -557,6 +582,10 @@ spec:
                                           pattern: ^((([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]))$
                                           type: string
                                         type: array
+                                      dnsFromIPPool:
+                                        description: DNSFromIPPool is the name of
+                                          the IPPool from which to get the DNS servers
+                                        type: string
                                     type: object
                                 required:
                                 - gateway
@@ -579,7 +608,7 @@ spec:
                               type: string
                             ipAddressFromIPPool:
                               description: IPAddressFromIPPool contains the name of
-                                the pool to use to get an ip address
+                                the IPPool to use to get an ip address
                               type: string
                             link:
                               description: Link is the link on which the network applies
@@ -596,7 +625,7 @@ spec:
                                     properties:
                                       fromIPPool:
                                         description: FromIPPool is the name of the
-                                          pool to fetch the gateway from
+                                          IPPool to fetch the gateway from
                                         type: string
                                       string:
                                         description: String is the gateway given as
@@ -624,6 +653,10 @@ spec:
                                           pattern: ^(([0-9a-fA-F]{1,4}:){7,7}[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,7}:|([0-9a-fA-F]{1,4}:){1,6}:[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,5}(:[0-9a-fA-F]{1,4}){1,2}|([0-9a-fA-F]{1,4}:){1,4}(:[0-9a-fA-F]{1,4}){1,3}|([0-9a-fA-F]{1,4}:){1,3}(:[0-9a-fA-F]{1,4}){1,4}|([0-9a-fA-F]{1,4}:){1,2}(:[0-9a-fA-F]{1,4}){1,5}|[0-9a-fA-F]{1,4}:((:[0-9a-fA-F]{1,4}){1,6})|:((:[0-9a-fA-F]{1,4}){1,7}|:))$
                                           type: string
                                         type: array
+                                      dnsFromIPPool:
+                                        description: DNSFromIPPool is the name of
+                                          the IPPool from which to get the DNS servers
+                                        type: string
                                     type: object
                                 required:
                                 - gateway
@@ -660,7 +693,7 @@ spec:
                                     properties:
                                       fromIPPool:
                                         description: FromIPPool is the name of the
-                                          pool to fetch the gateway from
+                                          IPPool to fetch the gateway from
                                         type: string
                                       string:
                                         description: String is the gateway given as
@@ -688,6 +721,10 @@ spec:
                                           pattern: ^(([0-9a-fA-F]{1,4}:){7,7}[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,7}:|([0-9a-fA-F]{1,4}:){1,6}:[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,5}(:[0-9a-fA-F]{1,4}){1,2}|([0-9a-fA-F]{1,4}:){1,4}(:[0-9a-fA-F]{1,4}){1,3}|([0-9a-fA-F]{1,4}:){1,3}(:[0-9a-fA-F]{1,4}){1,4}|([0-9a-fA-F]{1,4}:){1,2}(:[0-9a-fA-F]{1,4}){1,5}|[0-9a-fA-F]{1,4}:((:[0-9a-fA-F]{1,4}){1,6})|:((:[0-9a-fA-F]{1,4}){1,7}|:))$
                                           type: string
                                         type: array
+                                      dnsFromIPPool:
+                                        description: DNSFromIPPool is the name of
+                                          the IPPool from which to get the DNS servers
+                                        type: string
                                     type: object
                                 required:
                                 - gateway
@@ -723,7 +760,7 @@ spec:
                                     properties:
                                       fromIPPool:
                                         description: FromIPPool is the name of the
-                                          pool to fetch the gateway from
+                                          IPPool to fetch the gateway from
                                         type: string
                                       string:
                                         description: String is the gateway given as
@@ -751,6 +788,10 @@ spec:
                                           pattern: ^(([0-9a-fA-F]{1,4}:){7,7}[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,7}:|([0-9a-fA-F]{1,4}:){1,6}:[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,5}(:[0-9a-fA-F]{1,4}){1,2}|([0-9a-fA-F]{1,4}:){1,4}(:[0-9a-fA-F]{1,4}){1,3}|([0-9a-fA-F]{1,4}:){1,3}(:[0-9a-fA-F]{1,4}){1,4}|([0-9a-fA-F]{1,4}:){1,2}(:[0-9a-fA-F]{1,4}){1,5}|[0-9a-fA-F]{1,4}:((:[0-9a-fA-F]{1,4}){1,6})|:((:[0-9a-fA-F]{1,4}){1,7}|:))$
                                           type: string
                                         type: array
+                                      dnsFromIPPool:
+                                        description: DNSFromIPPool is the name of
+                                          the IPPool from which to get the DNS servers
+                                        type: string
                                     type: object
                                 required:
                                 - gateway
@@ -774,6 +815,10 @@ spec:
                           pattern: ((^((([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]))$)|(^(([0-9a-fA-F]{1,4}:){7,7}[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,7}:|([0-9a-fA-F]{1,4}:){1,6}:[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,5}(:[0-9a-fA-F]{1,4}){1,2}|([0-9a-fA-F]{1,4}:){1,4}(:[0-9a-fA-F]{1,4}){1,3}|([0-9a-fA-F]{1,4}:){1,3}(:[0-9a-fA-F]{1,4}){1,4}|([0-9a-fA-F]{1,4}:){1,2}(:[0-9a-fA-F]{1,4}){1,5}|[0-9a-fA-F]{1,4}:((:[0-9a-fA-F]{1,4}){1,6})|:((:[0-9a-fA-F]{1,4}){1,7}|:))$))
                           type: string
                         type: array
+                      dnsFromIPPool:
+                        description: DNSFromIPPool is the name of the IPPool from
+                          which to get the DNS servers
+                        type: string
                     type: object
                 type: object
             required:
