--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,44 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+coverage.*
+
+# Ansible
+*.retry
+
+# vim
+*~
+*.swp
+
+# envfiles
+.env
+envfile
+
+# kubeconfigs
+kind.kubeconfig
+minikube.kubeconfig
+kubeconfig
+
+# ssh keys
+.ssh*
+
+# Example and binary output directory
+/out
+
+# vscode
+.vscode
+
+# goland
+.idea
 
 bin/*
 hack/tools/bin/*
 examples/_out/*
 examples/provider-components/*-components.yaml
 out/*
+
+# Tilt files.
+.tiltbuild
+/tilt.d
+tilt-settings.json
+tilt_config.json
