--- a/config/bmo/kustomization.yaml
+++ b/config/bmo/kustomization.yaml
@@ -13,11 +13,18 @@ configMapGenerator:
   - DEPLOY_RAMDISK_URL=${DEPLOY_RAMDISK_URL}
   - IRONIC_ENDPOINT=${IRONIC_URL}
   - IRONIC_INSPECTOR_ENDPOINT=${IRONIC_INSPECTOR_URL}
+  - IRONIC_CACERT_FILE=/opt/metal3/certs/ca/tls.crt
   name: ironic-bmo-configmap
+
+secretGenerator:
+- name: ironic-cacert
+  literals:
+  - tls.crt=${IRONIC_CA_CERT_B64:-""}
 
 patchesStrategicMerge:
 - bmo_image_patch.yaml
 - bmo_pull_policy.yaml
+- secret_mount.yaml
 
 configurations:
 - kustomizeconfig.yaml
