CAPM3 Remediation Controller

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -82,8 +82,12 @@ rules:
   - machines
   - machines/status
   verbs:
+  - create
+  - delete
   - get
   - list
+  - patch
+  - update
   - watch
 - apiGroups:
   - cluster.x-k8s.io
@@ -205,6 +209,26 @@ rules:
   - patch
   - update
   - watch
+- apiGroups:
+  - infrastructure.cluster.x-k8s.io
+  resources:
+  - metal3remediations
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - infrastructure.cluster.x-k8s.io
+  resources:
+  - metal3remediations/status
+  verbs:
+  - get
+  - patch
+  - update
 - apiGroups:
   - ipam.metal3.io
   resources:
