--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -15,6 +15,8 @@ resources:
 - bases/infrastructure.cluster.x-k8s.io_metal3datatemplates.yaml
 - bases/infrastructure.cluster.x-k8s.io_metal3datas.yaml
 - bases/infrastructure.cluster.x-k8s.io_metal3dataclaims.yaml
+- bases/infrastructure.cluster.x-k8s.io_metal3remediations.yaml
+- bases/infrastructure.cluster.x-k8s.io_metal3remediationtemplates.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -26,6 +28,8 @@ patchesStrategicMerge:
 - patches/webhook_in_metal3datatemplates.yaml
 - patches/webhook_in_metal3datas.yaml
 - patches/webhook_in_metal3dataclaims.yaml
+- patches/webhook_in_metal3remediations.yaml
+- patches/webhook_in_metal3remediationtemplates.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -36,6 +40,8 @@ patchesStrategicMerge:
 - patches/cainjection_in_metal3datatemplates.yaml
 - patches/cainjection_in_metal3datas.yaml
 - patches/cainjection_in_metal3dataclaims.yaml
+- patches/cainjection_in_metal3remediations.yaml
+- patches/cainjection_in_metal3remediationtemplates.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
