--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -132,6 +132,48 @@ webhooks:
     resources:
     - metal3machinetemplates
   sideEffects: None
+- admissionReviewVersions:
+  - v1beta1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /mutate-infrastructure-cluster-x-k8s-io-v1alpha4-metal3remediation
+  failurePolicy: Fail
+  matchPolicy: Equivalent
+  name: mmetal3remediation.kb.io
+  rules:
+  - apiGroups:
+    - infrastructure.cluster.x-k8s.io
+    apiVersions:
+    - v1alpha4
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - metal3remediations
+  sideEffects: None
+- admissionReviewVersions:
+  - v1beta1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /mutate-infrastructure-cluster-x-k8s-io-v1alpha4-metal3remediationtemplate
+  failurePolicy: Fail
+  matchPolicy: Equivalent
+  name: metal3remediationtemplate.kb.io
+  rules:
+  - apiGroups:
+    - infrastructure.cluster.x-k8s.io
+    apiVersions:
+    - v1alpha4
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - metal3remediationtemplates
+  sideEffects: None
 
 ---
 apiVersion: admissionregistration.k8s.io/v1
@@ -265,4 +307,46 @@ webhooks:
     - UPDATE
     resources:
     - metal3machinetemplates
+  sideEffects: None
+- admissionReviewVersions:
+  - v1beta1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-infrastructure-cluster-x-k8s-io-v1alpha4-metal3remediation
+  failurePolicy: Fail
+  matchPolicy: Equivalent
+  name: vmetal3remediation.kb.io
+  rules:
+  - apiGroups:
+    - infrastructure.cluster.x-k8s.io
+    apiVersions:
+    - v1alpha4
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - metal3remediations
+  sideEffects: None
+- admissionReviewVersions:
+  - v1beta1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-infrastructure-cluster-x-k8s-io-v1alpha4-metal3remediationtemplate
+  failurePolicy: Fail
+  matchPolicy: Equivalent
+  name: metal3remediationtemplate.kb.io
+  rules:
+  - apiGroups:
+    - infrastructure.cluster.x-k8s.io
+    apiVersions:
+    - v1alpha4
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - metal3remediationtemplates
   sideEffects: None
