--- a/config/bmo/bmo_image_patch.yaml
+++ b/config/bmo/bmo_image_patch.yaml
@@ -1,11 +1,12 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: metal3-baremetal-operator
+  name: baremetal-operator-controller-manager
+  namespace: baremetal-operator-system
 spec:
   template:
     spec:
       containers:
       # Change the value of image field below to your controller image URL
       - image: quay.io/metal3-io/baremetal-operator:master
-        name: baremetal-operator
+        name: manager
