--- a/config/bmo/bmo_pull_policy.yaml
+++ b/config/bmo/bmo_pull_policy.yaml
@@ -1,10 +1,11 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: metal3-baremetal-operator
+  name: baremetal-operator-controller-manager
+  namespace: baremetal-operator-system
 spec:
   template:
     spec:
       containers:
-      - name: baremetal-operator
+      - name: manager
         imagePullPolicy: IfNotPresent
