--- a/config/bmo/secret_mount.yaml
+++ b/config/bmo/secret_mount.yaml
@@ -1,12 +1,13 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: metal3-baremetal-operator
+  name: baremetal-operator-controller-manager
+  namespace: baremetal-operator-system
 spec:
   template:
     spec:
       containers:
-      - name: baremetal-operator
+      - name: manager
         volumeMounts:
           - name: cacert
             mountPath: "/opt/metal3/${IRONIC_NO_CA_CERT:-certs}/ca/"
