--- a/examples/controlplane/controlplane.yaml
+++ b/examples/controlplane/controlplane.yaml
@@ -3,6 +3,7 @@ apiVersion: controlplane.cluster.x-k8s.io/v1alpha3
 metadata:
   name: ${CLUSTER_NAME}-controlplane
 spec:
+  nodeDrainTimeout: ${NODE_DRAIN_TIMEOUT:-"0s"}
   replicas: 3
   version: v1.17.0
   infrastructureTemplate:
