--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -3,8 +3,6 @@ kind: Kustomization
 resources:
 - role.yaml
 - role_binding.yaml
-- auth_proxy_service.yaml
-- auth_proxy_role.yaml
-- auth_proxy_role_binding.yaml
+- service_account.yaml
 - leader_election_role_binding.yaml
 - leader_election_role.yaml
