--- a/examples/clusterctl-templates/clusterctl-cluster.yaml
+++ b/examples/clusterctl-templates/clusterctl-cluster.yaml
@@ -35,13 +35,14 @@ metadata:
   name: ${CLUSTER_NAME}
   namespace: ${NAMESPACE}
 spec:
-  nodeDrainTimeout: ${NODE_DRAIN_TIMEOUT:-"0s"}
+  machineTemplate:
+    nodeDrainTimeout: ${NODE_DRAIN_TIMEOUT:-"0s"}
+    infrastructureRef:
+      kind: Metal3MachineTemplate
+      apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
+      name: ${CLUSTER_NAME}-controlplane
   replicas: ${CONTROL_PLANE_MACHINE_COUNT}
   version: ${KUBERNETES_VERSION}
-  infrastructureTemplate:
-    kind: Metal3MachineTemplate
-    apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
-    name: ${CLUSTER_NAME}-controlplane
   kubeadmConfigSpec:
     joinConfiguration:
       controlPlane: {}
