--- a/examples/controlplane/controlplane.yaml
+++ b/examples/controlplane/controlplane.yaml
@@ -3,13 +3,14 @@ apiVersion: controlplane.cluster.x-k8s.io/v1alpha3
 metadata:
   name: ${CLUSTER_NAME}-controlplane
 spec:
-  nodeDrainTimeout: ${NODE_DRAIN_TIMEOUT:-"0s"}
+  machineTemplate:
+    nodeDrainTimeout: ${NODE_DRAIN_TIMEOUT:-"0s"}
+    infrastructureRef:
+      kind: Metal3MachineTemplate
+      apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
+      name: ${CLUSTER_NAME}-controlplane
   replicas: 3
   version: v1.21.2
-  infrastructureTemplate:
-    kind: Metal3MachineTemplate
-    apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
-    name: ${CLUSTER_NAME}-controlplane
   kubeadmConfigSpec:
     initConfiguration:
       nodeRegistration:
