Add more shortNames for metal3 config objects
Add more shortNames for metal3 config objects in a
consistent way.

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3clusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3clusters.yaml
@@ -18,6 +18,9 @@ spec:
     shortNames:
     - m3c
     - m3cluster
+    - m3clusters
+    - metal3c
+    - metal3cluster
     singular: metal3cluster
   scope: Namespaced
   versions:
