--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3datas.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3datas.yaml
@@ -18,6 +18,9 @@ spec:
     shortNames:
     - m3d
     - m3data
+    - m3datas
+    - metal3d
+    - metal3data
     singular: metal3data
   scope: Namespaced
   versions:
