--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
@@ -18,6 +18,9 @@ spec:
     shortNames:
     - m3m
     - m3machine
+    - m3machines
+    - metal3m
+    - metal3machine
     singular: metal3machine
   scope: Namespaced
   versions:
