--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -1,13 +1,14 @@
 
 ---
-apiVersion: admissionregistration.k8s.io/v1beta1
+apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
   creationTimestamp: null
   name: mutating-webhook-configuration
 webhooks:
-- clientConfig:
-    caBundle: Cg==
+- admissionReviewVersions:
+  - v1beta1
+  clientConfig:
     service:
       name: webhook-service
       namespace: system
@@ -25,8 +26,10 @@ webhooks:
     - UPDATE
     resources:
     - metal3clusters
-- clientConfig:
-    caBundle: Cg==
+  sideEffects: None
+- admissionReviewVersions:
+  - v1beta1
+  clientConfig:
     service:
       name: webhook-service
       namespace: system
@@ -44,8 +47,10 @@ webhooks:
     - UPDATE
     resources:
     - metal3datas
-- clientConfig:
-    caBundle: Cg==
+  sideEffects: None
+- admissionReviewVersions:
+  - v1beta1
+  clientConfig:
     service:
       name: webhook-service
       namespace: system
@@ -63,8 +68,10 @@ webhooks:
     - UPDATE
     resources:
     - metal3dataclaims
-- clientConfig:
-    caBundle: Cg==
+  sideEffects: None
+- admissionReviewVersions:
+  - v1beta1
+  clientConfig:
     service:
       name: webhook-service
       namespace: system
@@ -82,8 +89,10 @@ webhooks:
     - UPDATE
     resources:
     - metal3datatemplates
-- clientConfig:
-    caBundle: Cg==
+  sideEffects: None
+- admissionReviewVersions:
+  - v1beta1
+  clientConfig:
     service:
       name: webhook-service
       namespace: system
@@ -101,8 +110,10 @@ webhooks:
     - UPDATE
     resources:
     - metal3machines
-- clientConfig:
-    caBundle: Cg==
+  sideEffects: None
+- admissionReviewVersions:
+  - v1beta1
+  clientConfig:
     service:
       name: webhook-service
       namespace: system
@@ -120,16 +131,18 @@ webhooks:
     - UPDATE
     resources:
     - metal3machinetemplates
+  sideEffects: None
 
 ---
-apiVersion: admissionregistration.k8s.io/v1beta1
+apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
   creationTimestamp: null
   name: validating-webhook-configuration
 webhooks:
-- clientConfig:
-    caBundle: Cg==
+- admissionReviewVersions:
+  - v1beta1
+  clientConfig:
     service:
       name: webhook-service
       namespace: system
@@ -147,8 +160,10 @@ webhooks:
     - UPDATE
     resources:
     - metal3clusters
-- clientConfig:
-    caBundle: Cg==
+  sideEffects: None
+- admissionReviewVersions:
+  - v1beta1
+  clientConfig:
     service:
       name: webhook-service
       namespace: system
@@ -166,8 +181,10 @@ webhooks:
     - UPDATE
     resources:
     - metal3datas
-- clientConfig:
-    caBundle: Cg==
+  sideEffects: None
+- admissionReviewVersions:
+  - v1beta1
+  clientConfig:
     service:
       name: webhook-service
       namespace: system
@@ -185,8 +202,10 @@ webhooks:
     - UPDATE
     resources:
     - metal3dataclaims
-- clientConfig:
-    caBundle: Cg==
+  sideEffects: None
+- admissionReviewVersions:
+  - v1beta1
+  clientConfig:
     service:
       name: webhook-service
       namespace: system
@@ -204,8 +223,10 @@ webhooks:
     - UPDATE
     resources:
     - metal3datatemplates
-- clientConfig:
-    caBundle: Cg==
+  sideEffects: None
+- admissionReviewVersions:
+  - v1beta1
+  clientConfig:
     service:
       name: webhook-service
       namespace: system
@@ -223,8 +244,10 @@ webhooks:
     - UPDATE
     resources:
     - metal3machines
-- clientConfig:
-    caBundle: Cg==
+  sideEffects: None
+- admissionReviewVersions:
+  - v1beta1
+  clientConfig:
     service:
       name: webhook-service
       namespace: system
@@ -242,3 +265,4 @@ webhooks:
     - UPDATE
     resources:
     - metal3machinetemplates
+  sideEffects: None
