--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
@@ -116,12 +116,12 @@ spec:
                     - qcow2
                     - vdi
                     - vmdk
+                    - live-iso
                     type: string
                   url:
                     description: URL is a location of an image to deploy.
                     type: string
                 required:
-                - checksum
                 - url
                 type: object
               providerID:
@@ -350,12 +350,12 @@ spec:
                     - qcow2
                     - vdi
                     - vmdk
+                    - live-iso
                     type: string
                   url:
                     description: URL is a location of an image to deploy.
                     type: string
                 required:
-                - checksum
                 - url
                 type: object
               metaData:
