--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
@@ -78,7 +78,7 @@ spec:
                         description: Image is the image to be provisioned.
                         properties:
                           checksum:
-                            description: Checksum is a md5sum value or a URL to retrieve one.
+                            description: Checksum is a md5sum value or a URL to retrieve one. Not required for live-iso.
                             type: string
                           checksumType:
                             description: ChecksumType is the checksum algorithm for the image. e.g md5, sha256, sha512
@@ -88,7 +88,7 @@ spec:
                             - sha512
                             type: string
                           format:
-                            description: DiskFormat contains the image disk format
+                            description: DiskFormat contains the image disk format.
                             enum:
                             - raw
                             - qcow2
@@ -206,7 +206,7 @@ spec:
                         description: Image is the image to be provisioned.
                         properties:
                           checksum:
-                            description: Checksum is a md5sum value or a URL to retrieve one.
+                            description: Checksum is a md5sum value or a URL to retrieve one. Not required for live-iso.
                             type: string
                           checksumType:
                             description: ChecksumType is the checksum algorithm for the image. e.g md5, sha256, sha512
@@ -216,7 +216,7 @@ spec:
                             - sha512
                             type: string
                           format:
-                            description: DiskFormat contains the image disk format
+                            description: DiskFormat contains the image disk format.
                             enum:
                             - raw
                             - qcow2
