Add golint and codegen test in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ env:
     - TARGET=markdownlint
     - TARGET=govet
     - TARGET=gofmt
+    - TARGET=golint
+    - TARGET=codegen
 
 script:
 - ./hack/${TARGET}.sh
